--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -1,21 +1,23 @@
 <div class="parent-login">
-  <img src="assets/back.png" width="100" alt="">
+<app-back></app-back>
   <div class="center">
     <h1>Se connecter</h1>
     <form class="login-form" [formGroup]="form" (ngSubmit)="connexion()">
-    <div class="d-flex flex-column">
-      <p class="mb-0">E-mail ou nom d’utilisateur</p>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" formControlName="email" aria-label="username">
+      <div class="d-flex flex-column">
+        <p class="mb-0">E-mail ou nom d’utilisateur</p>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" formControlName="email" aria-label="username">
+        </div>
       </div>
-    </div>
-    <div class="d-flex flex-column">
-      <p class="mb-0">Mot de passe</p>
-      <div class="input-group mb-3">
-        <input type="password" class="form-control" formControlName="password" aria-label="password">
+      <div class="d-flex flex-column">
+        <p class="mb-0">Mot de passe</p>
+        <div class="input-group mb-3">
+          <input type="password" class="form-control" formControlName="password" aria-label="password">
+        </div>
       </div>
-    </div>
-    <button id="button-mdd" class="w-100" mat-flat-button>Se connecter</button>
+      <div class="d-flex justify-content-center">
+        <button id="button-mdd" class="w-80" mat-flat-button>Se connecter</button>
+      </div>
     </form>
   </div>
 </div>
