--- a/front/src/app/pages/register/register.component.html
+++ b/front/src/app/pages/register/register.component.html
@@ -1,1 +1,32 @@
-<p>register works!</p>
+<div class="parent-register">
+  <app-back></app-back>
+  <div class="center">
+    <h1>Inscription</h1>
+    <form class="register-form" [formGroup]="form" (ngSubmit)="register()">
+      <div class="d-flex flex-column">
+        <p class="mb-0">Nom d’utilisateur</p>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" formControlName="username" aria-label="username">
+        </div>
+      </div>
+      <div class="d-flex flex-column">
+        <p class="mb-0">E-mail</p>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" formControlName="email" aria-label="username">
+        </div>
+      </div>
+      <div class="d-flex flex-column">
+        <p class="mb-0">Mot de passe</p>
+        <div class="input-group mb-3">
+          <input type="password" class="form-control" formControlName="password" aria-label="password">
+        </div>
+      </div>
+      <div class="d-flex justify-content-center">
+        <button id="button-mdd" class="w-80" mat-flat-button>S'inscrire</button>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+
