create back end front for , get single article , get all article, create article

--- a/front/src/app/pages/articles/articles.component.html
+++ b/front/src/app/pages/articles/articles.component.html
@@ -1,1 +1,14 @@
-<p>articles works!</p>
+<div class="w-90">
+  <div class="div-button d-flex justify-content-between">
+    <button id="button-mdd" class="w-80" mat-flat-button routerLink="/create-article">Créer un article</button>
+    <button class="d-flex flex-row-reverse" mat-button>Trier par <mat-icon style="margin-right: 0">arrow_downward</mat-icon></button>
+  </div>
+
+  <div class="container">
+    @for(article of articles; track article.id){
+      <app-card-article class="item" routerLink="/single-article/{{article.id}}" [article]="article"> </app-card-article>
+    }
+  </div>
+</div>
+
+
