--- a/front/src/app/pages/profile/profile.component.html
+++ b/front/src/app/pages/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="parent-login">
   <app-back></app-back>
   <div class="center">
-    <h1>Profil utilisateur</h1>
+    <h1 class="fw-bold">Profil utilisateur</h1>
     <form class="login-form" [formGroup]="form" (ngSubmit)="save()">
       <div class="d-flex flex-column">
         <p class="mb-0">Nom d’utilisateur</p>
