--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -15,7 +15,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color: white !important;
   background-color: #7763C5 !important;
 }
-.parent-login{
+.w90auto{
   width: 90%;
   margin: auto;
 }
