fix bug with username author

--- a/front/src/app/pages/articles/create-article/create-article.component.html
+++ b/front/src/app/pages/articles/create-article/create-article.component.html
@@ -9,7 +9,7 @@
         </div>
         <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
           @for (option of filteredOptions | async; track option) {
-            <mat-option [value]="option">{{ option.name }}</mat-option>
+            <mat-option [value]="option">{{ option.title }}</mat-option>
           }
         </mat-autocomplete>
       </div>
