--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,1 +1,4 @@
+<nav>
+  <a routerLink="/articles">Articles</a><a routerLink="/themes">Themes</a><a routerLink="/profile">Profile</a>
+</nav>
 <router-outlet></router-outlet>
