--- a/front/src/app/pages/articles/single-article/single-article.component.html
+++ b/front/src/app/pages/articles/single-article/single-article.component.html
@@ -2,7 +2,7 @@
   <app-back></app-back>
   <div>
     <h1>{{article.title}}</h1>
-    <div class="d-flex info justify-content-between"><p>{{article.publishedDate | date}}</p> <p>{{article.authorID}}</p> <p>{{article.themeID}}</p></div>
+    <div class="d-flex info justify-content-between"><p>{{article.publishedDate | date}}</p> <p>{{article.author.username}}</p> <p>{{article.theme.name}}</p></div>
     <p>{{article.content}}</p>
   </div>
   <hr/>
