--- a/front/src/app/pages/profile/profile.component.scss
+++ b/front/src/app/pages/profile/profile.component.scss
@@ -3,3 +3,10 @@
   font-weight: bold;
   text-align: center;
 }
+.center {
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
