--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -19,3 +19,20 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   width: 90%;
   margin: auto;
 }
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+}
+.w-90{
+  width: 90% !important;
+  margin: auto;
+}
+.div-button{
+  margin: 16px;
+}
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
