subscribe theme and page profile terminate

--- a/front/src/app/pages/articles/articles.component.html
+++ b/front/src/app/pages/articles/articles.component.html
@@ -6,7 +6,9 @@
 
   <div class="container">
     @for(article of articles; track article.id){
-      <app-card-article class="item" routerLink="/single-article/{{article.id}}" [article]="article"> </app-card-article>
+      @if(article){
+        <app-card-article class="item" routerLink="/single-article/{{article.id}}" [article]="article"> </app-card-article>
+      }
     }
   </div>
 </div>
