--- a/front/src/app/pages/profile/profile.component.html
+++ b/front/src/app/pages/profile/profile.component.html
@@ -28,7 +28,7 @@
 <div class="w-90">
   <div class="container">
     @for(theme of user.themes; track theme.id){
-      <app-card-theme (themeChanged)="onThemeChanged()" [subscribe]="true" [theme]="theme" [themeUser]="user.themes"></app-card-theme>
+      <app-card-theme [profile]="true" (change)="getProfile('romain@gmail.com')" [theme]="theme" [themeUser]="user.themes"></app-card-theme>
     }
   </div>
 </div>
