--- a/front/src/app/pages/themes/card-theme/card-theme.component.html
+++ b/front/src/app/pages/themes/card-theme/card-theme.component.html
@@ -1,7 +1,9 @@
 <mat-card>
-  <h6>{{theme.name}}</h6>
-  <p>{{theme.content}}</p>
-  <div class="d-flex justify-content-center">
-    <button id="button-mdd" class="w-80" (click)="subscribeTheme()" mat-flat-button>{{subscribeString}}</button>
-  </div>
+  @if(theme){
+    <h6>{{theme.name}}</h6>
+    <p>{{theme.content}}</p>
+      <div class="d-flex justify-content-center">
+        <button id="button-mdd" class="w-80" (click)="subscribeTheme()" mat-flat-button>{{this.theme.subscribed ? 'Se désinscrire' : 'S\'inscrire'}}</button>
+      </div>
+  }
 </mat-card>
