--- a/front/src/app/pages/themes/themes.component.html
+++ b/front/src/app/pages/themes/themes.component.html
@@ -3,10 +3,11 @@
     <button id="button-mdd" class="w-80" mat-flat-button routerLink="/create-article">Créer un article</button>
     <button class="d-flex flex-row-reverse" mat-button>Trier par <mat-icon style="margin-right: 0">arrow_downward</mat-icon></button>
   </div>
-
+@if(themesUser){
   <div class="container">
     @for(theme of themes; track theme.id){
-      <app-card-theme [subscribe]="checkTheme(theme.id)" class="item" [themeUser]="themesUser" [theme]="theme"> </app-card-theme>
+      <app-card-theme [profile]="false" class="item" [themeUser]="themesUser" [theme]="theme" > </app-card-theme>
     }
   </div>
+}
 </div>
