--- a/front/src/app/pages/articles/single-article/single-article.component.html
+++ b/front/src/app/pages/articles/single-article/single-article.component.html
@@ -6,4 +6,18 @@
     <p>{{article.content}}</p>
   </div>
   <hr/>
+  <h2>Commentaire</h2>
+  @for (comment of article.comments; track comment.id){
+    <div class="d-flex w-80 justify-content-between">
+      <p>{{comment.author.username}}</p>
+      <p class="content-comment">{{comment.content}}</p>
+    </div>
+  }
+  <div class="d-flex">
+    <textarea class="comment-textarea" [(ngModel)]="newComment" placeholder="Écrivez ici votre commentaire"></textarea>
+    <div class="d-flex justify-content-center flex-column">
+      <img (click)="sendComment()"  class="send-img" width="40px" height="40px" src="./assets/iconsend.png" alt="">
+    </div>
+  </div>
+
 </div>
