jwt finally, navbar desktop OK

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,2 @@
-<nav>
-  <a routerLink="/articles">Articles</a><a routerLink="/themes">Themes</a><a routerLink="/profile">Profile</a>
-</nav>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
