--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,27 @@
-<p>navbar works!</p>
+@if (sessionService.isAuthenticated()) {
+  <header class="header">
+    <img class="logo-header" src="assets/logo_p6.png" alt="">
+    <nav class="desktop-menu">
+      <div class="d-flex justify-content-center flex-column">
+        <a routerLink="/articles" routerLinkActive="active-link">Articles</a>
+      </div>
+      <div class="d-flex justify-content-center flex-column">
+        <a routerLink="/themes" routerLinkActive="active-link">Thèmes</a>
+      </div>
+      <div class="user-icon" routerLink="/profile" routerLinkActive="active-link">
+        <img [src]="isProfileActive() ? 'assets/user-active.png' : 'assets/user.png'"alt="Profile Picture">
+      </div>
+    </nav>
+    <div class="mobile-menu-icon" (click)="toggleMobileMenu()">
+      <i class="fas fa-bars"></i>
+    </div>
+  </header>
+
+  <nav class="mobile-menu" [class.open]="mobileMenuOpen">
+    <a routerLink="/articles" routerLinkActive="active-link">Articles</a>
+    <a routerLink="/themes" routerLinkActive="active-link">Thèmes</a>
+    <div class="user-icon">
+      <img [src]="isProfileActive() ? 'assets/user-active.png' : 'assets/user.png'"alt="Profile Picture">
+    </div>
+  </nav>
+}
