--- a/front/src/app/pages/articles/single-article/single-article.component.scss
+++ b/front/src/app/pages/articles/single-article/single-article.component.scss
@@ -5,6 +5,7 @@
 .content-comment{
   width: 70%;
   border-radius: 6px;
+  padding: 5px;
   margin: 20px auto;
   background-color: #F5F5F5;
   min-height: 80px;
