--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="w90auto">
-<app-back></app-back>
+<app-back [path]="'/'"></app-back>
   <div class="center">
     <h1>Se connecter</h1>
     <form class="login-form" [formGroup]="form" (ngSubmit)="connexion()">
