--- a/front/src/app/components/back/back.component.html
+++ b/front/src/app/components/back/back.component.html
@@ -1,1 +1,1 @@
-<img src="assets/back.png" width="100" alt="" class="cursor-pointer" (click)="back()">
+<img src="assets/back.png" width="60" alt="" class="cursor-pointer mb-80" (click)="back()">
