--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -9,19 +9,28 @@
         <a routerLink="/themes" routerLinkActive="active-link">Thèmes</a>
       </div>
       <div class="user-icon" routerLink="/profile" routerLinkActive="active-link">
-        <img [src]="isProfileActive() ? 'assets/user-active.png' : 'assets/user.png'"alt="Profile Picture">
+        <img [src]="isProfileActive() ? 'assets/user-active.png' : 'assets/user.png'" alt="Profile Picture">
       </div>
     </nav>
     <div class="mobile-menu-icon" (click)="toggleMobileMenu()">
-      <i class="fas fa-bars"></i>
+      <img src="assets/burger.png" alt="">
     </div>
   </header>
-
-  <nav class="mobile-menu" [class.open]="mobileMenuOpen">
-    <a routerLink="/articles" routerLinkActive="active-link">Articles</a>
-    <a routerLink="/themes" routerLinkActive="active-link">Thèmes</a>
-    <div class="user-icon">
-      <img [src]="isProfileActive() ? 'assets/user-active.png' : 'assets/user.png'"alt="Profile Picture">
+@if(mobileMenuOpen){
+  <div class="mobile-menu-overlay" (click)="toggleMobileMenu()"></div>
+}
+  <nav class="mobile-menu d-flex justify-content-between flex-column" [class.open]="mobileMenuOpen">
+    <div class="d-flex flex-column mt-6">
+      <div class="d-flex justify-content-end mt-2 mb-2">
+        <a routerLink="/articles" routerLinkActive="active-link">Articles</a>
+      </div>
+      <div class="d-flex justify-content-end mt-2 mb-2">
+        <a routerLink="/themes" routerLinkActive="active-link">Thèmes</a>
+      </div>
+    </div>
+    <div class="user-icon d-flex justify-content-end" routerLink="/profile" routerLinkActive="active-link">
+      <img [src]="isProfileActive() ? 'assets/user-active.png' : 'assets/user.png'" alt="Profile Picture">
     </div>
   </nav>
+
 }
