--- a/front/src/app/pages/articles/articles.component.html
+++ b/front/src/app/pages/articles/articles.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="container">
-    @for(article of articles; track trackByArticleId){
+    @for(article of articles; track article.id){
       @if(article){
         <app-card-article class="item" routerLink="/single-article/{{article.id}}" [article]="article"> </app-card-article>
       }
