--- a/front/src/app/pages/themes/card-theme/card-theme.component.html
+++ b/front/src/app/pages/themes/card-theme/card-theme.component.html
@@ -1,6 +1,6 @@
-<mat-card>
+<mat-card class="p-1">
   @if(theme){
-    <h6>{{theme.name}}</h6>
+    <h2>{{theme.name}}</h2>
     <p>{{theme.content}}</p>
       <div class="d-flex justify-content-center">
         <button id="button-mdd" class="w-80" (click)="subscribeTheme()" mat-flat-button>{{this.theme.subscribed ? 'Se désinscrire' : 'S\'inscrire'}}</button>
