--- a/front/src/app/pages/articles/articles.component.html
+++ b/front/src/app/pages/articles/articles.component.html
@@ -1,7 +1,7 @@
 <div class="w-90">
   <div class="div-button d-flex justify-content-between">
     <button id="button-mdd" class="w-80" mat-flat-button routerLink="/create-article">Créer un article</button>
-    <button class="d-flex flex-row-reverse" mat-button>Trier par <mat-icon style="margin-right: 0">arrow_downward</mat-icon></button>
+    <button class="d-flex flex-row-reverse" (click)="toggleSortOrder()" mat-button>Trier par <mat-icon style="margin-right: 0">{{reverseOrder ? 'arrow_upward' :'arrow_downward'}}</mat-icon></button>
   </div>
 
   <div class="container">
