--- a/front/src/app/pages/themes/themes.component.html
+++ b/front/src/app/pages/themes/themes.component.html
@@ -1,8 +1,4 @@
-<div class="w-90">
-  <div class="div-button d-flex justify-content-between">
-    <button id="button-mdd" class="w-80" mat-flat-button routerLink="/create-article">Créer un article</button>
-    <button class="d-flex flex-row-reverse" mat-button>Trier par <mat-icon style="margin-right: 0">arrow_downward</mat-icon></button>
-  </div>
+<div class="w-90 mt-5">
 @if(themesUser){
   <div class="container">
     @for(theme of themes; track theme.id){
