--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -22,13 +22,13 @@
   <nav class="mobile-menu d-flex justify-content-between flex-column" [class.open]="mobileMenuOpen">
     <div class="d-flex flex-column mt-6">
       <div class="d-flex justify-content-end mt-2 mb-2">
-        <a routerLink="/articles" routerLinkActive="active-link">Articles</a>
+        <a routerLink="/articles" routerLinkActive="active-link" (click)="toggleMobileMenu()">Articles</a>
       </div>
       <div class="d-flex justify-content-end mt-2 mb-2">
-        <a routerLink="/themes" routerLinkActive="active-link">Thèmes</a>
+        <a routerLink="/themes" routerLinkActive="active-link" (click)="toggleMobileMenu()">Thèmes</a>
       </div>
     </div>
-    <div class="user-icon d-flex justify-content-end" routerLink="/profile" routerLinkActive="active-link">
+    <div class="user-icon d-flex justify-content-end" routerLink="/profile" routerLinkActive="active-link" (click)="toggleMobileMenu()">
       <img [src]="isProfileActive() ? 'assets/user-active.png' : 'assets/user.png'" alt="Profile Picture">
     </div>
   </nav>
